add: gorma sample
