# app/media_types.go
@@ -38,30 +38,6 @@ func (mt *Account) Validate() (err error) {
 	return
 }
 
-// celler account (link view)
-//
-// Identifier: application/vnd.account+json; view=link
-type AccountLink struct {
-	// メールアドレス
-	Email string `form:"email" json:"email" xml:"email"`
-	// id
-	ID int `form:"id" json:"id" xml:"id"`
-	// 名前
-	Name string `form:"name" json:"name" xml:"name"`
-}
-
-// Validate validates the AccountLink media type instance.
-func (mt *AccountLink) Validate() (err error) {
-
-	if mt.Name == "" {
-		err = goa.MergeErrors(err, goa.MissingAttributeError(`response`, "name"))
-	}
-	if mt.Email == "" {
-		err = goa.MergeErrors(err, goa.MissingAttributeError(`response`, "email"))
-	}
-	return
-}
-
 // AccountCollection is the media type for an array of Account (default view)
 //
 // Identifier: application/vnd.account+json; type=collection; view=default
@@ -69,23 +45,6 @@ type AccountCollection []*Account
 
 // Validate validates the AccountCollection media type instance.
 func (mt AccountCollection) Validate() (err error) {
-	for _, e := range mt {
-		if e != nil {
-			if err2 := e.Validate(); err2 != nil {
-				err = goa.MergeErrors(err, err2)
-			}
-		}
-	}
-	return
-}
-
-// AccountCollection is the media type for an array of Account (link view)
-//
-// Identifier: application/vnd.account+json; type=collection; view=link
-type AccountLinkCollection []*AccountLink
-
-// Validate validates the AccountLinkCollection media type instance.
-func (mt AccountLinkCollection) Validate() (err error) {
 	for _, e := range mt {
 		if e != nil {
 			if err2 := e.Validate(); err2 != nil {
@@ -126,10 +85,9 @@ func (mt *Articletype) Validate() (err error) {
 //
 // Identifier: application/vnd.bottle+json; view=default
 type Bottle struct {
+	Account *Account `form:"account" json:"account" xml:"account"`
 	// id
 	ID int `form:"id" json:"id" xml:"id"`
-	// Links to related resources
-	Links *BottleLinks `form:"links,omitempty" json:"links,omitempty" xml:"links,omitempty"`
 	// ボトル名
 	Name string `form:"name" json:"name" xml:"name"`
 	// 数量
@@ -143,23 +101,11 @@ func (mt *Bottle) Validate() (err error) {
 		err = goa.MergeErrors(err, goa.MissingAttributeError(`response`, "name"))
 	}
 
-	if mt.Links != nil {
-		if err2 := mt.Links.Validate(); err2 != nil {
-			err = goa.MergeErrors(err, err2)
-		}
+	if mt.Account == nil {
+		err = goa.MergeErrors(err, goa.MissingAttributeError(`response`, "account"))
 	}
-	return
-}
-
-// BottleLinks contains links to related resources of Bottle.
-type BottleLinks struct {
-	Account *AccountLink `form:"account,omitempty" json:"account,omitempty" xml:"account,omitempty"`
-}
-
-// Validate validates the BottleLinks type instance.
-func (ut *BottleLinks) Validate() (err error) {
-	if ut.Account != nil {
-		if err2 := ut.Account.Validate(); err2 != nil {
+	if mt.Account != nil {
+		if err2 := mt.Account.Validate(); err2 != nil {
 			err = goa.MergeErrors(err, err2)
 		}
 	}
@@ -174,21 +120,6 @@ type BottleCollection []*Bottle
 // Validate validates the BottleCollection media type instance.
 func (mt BottleCollection) Validate() (err error) {
 	for _, e := range mt {
-		if e != nil {
-			if err2 := e.Validate(); err2 != nil {
-				err = goa.MergeErrors(err, err2)
-			}
-		}
-	}
-	return
-}
-
-// BottleLinksArray contains links to related resources of BottleCollection.
-type BottleLinksArray []*BottleLinks
-
-// Validate validates the BottleLinksArray type instance.
-func (ut BottleLinksArray) Validate() (err error) {
-	for _, e := range ut {
 		if e != nil {
 			if err2 := e.Validate(); err2 != nil {
 				err = goa.MergeErrors(err, err2)
