# models/account_helper.go
@@ -65,51 +65,3 @@ func (m *AccountDB) OneAccount(ctx context.Context, id int) (*app.Account, error
 	view := *native.AccountToAccount()
 	return &view, err
 }
-
-// MediaType Retrieval Functions
-
-// ListAccountLink returns an array of view: link.
-func (m *AccountDB) ListAccountLink(ctx context.Context) []*app.AccountLink {
-	defer goa.MeasureSince([]string{"goa", "db", "account", "listaccountlink"}, time.Now())
-
-	var native []*Account
-	var objs []*app.AccountLink
-	err := m.Db.Scopes().Table(m.TableName()).Find(&native).Error
-
-	if err != nil {
-		goa.LogError(ctx, "error listing Account", "error", err.Error())
-		return objs
-	}
-
-	for _, t := range native {
-		objs = append(objs, t.AccountToAccountLink())
-	}
-
-	return objs
-}
-
-// AccountToAccountLink loads a Account and builds the link view of media type Account.
-func (m *Account) AccountToAccountLink() *app.AccountLink {
-	account := &app.AccountLink{}
-	account.Email = m.Email
-	account.ID = m.ID
-	account.Name = m.Name
-
-	return account
-}
-
-// OneAccountLink loads a Account and builds the link view of media type Account.
-func (m *AccountDB) OneAccountLink(ctx context.Context, id int) (*app.AccountLink, error) {
-	defer goa.MeasureSince([]string{"goa", "db", "account", "oneaccountlink"}, time.Now())
-
-	var native Account
-	err := m.Db.Scopes().Table(m.TableName()).Preload("Bottles").Where("id = ?", id).Find(&native).Error
-
-	if err != nil && err != gorm.ErrRecordNotFound {
-		goa.LogError(ctx, "error getting Account", "error", err.Error())
-		return nil, err
-	}
-
-	view := *native.AccountToAccountLink()
-	return &view, err
-}
